--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on: push
 jobs:
-  tests:
+  linter:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -9,5 +9,5 @@ jobs:
       with:
         python-version: 3.9
         architecture: x64
-    - run: pip install black
-    - run: black src
+    - run: pip install -r requirements-dev.txt
+    - run: flake8 src
