--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,9 @@ flake8==4.0.1
 flake8-bandit==3.0.0
 flake8-black==0.3.2
 flake8-bugbear==22.1.11
+pep8-naming==0.12.1
 black==22.1.0
+pytest==7.1.1
+coverage==6.3.2
+pytest-cov==3.0.0
+codecov==2.1.12
