--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,16 +4,19 @@ jobs:
   linter:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
+    - name: Checkout sources
+      uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v1
       with:
         python-version: 3.9
         architecture: x64
-    - run: pip install -r requirements-dev.txt
+    - name: Set up dev requirements
+      run: pip install -r requirements-dev.txt
 #    - run: flake8 src
     - name: Install package
-        run: |
+      run: |
           pip install .
     - name: Run test
-        run: |
+      run: |
           pytest -ra
