--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[build-system]
+requires = ["setuptools", "wheel"]  # PEP 508 specifications.
+
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
 
