--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@ flake8-bugbear==22.1.11
 pep8-naming==0.12.1
 black==22.1.0
 pytest==7.1.1
+pytest-mock==3.7.0
 coverage==6.3.2
 pytest-cov==3.0.0
 codecov==2.1.12
