--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
     - run: coverage erase
     - name: Run test
       run: |
-          pytest --cov -ra
+          PYTHONPATH=src/ pytest --cov -ra
     - name: Upload codecov
       run: coverage xml --fail-under=0 && codecov
       env:
